# auden

./: Cargo.toml  README.md
.github/workflows/: main.yml
benches/: buffer.rs  pool.rs
examples/cli/: Cargo.toml
examples/cli/src/: cli.rs
src/: buffer.rs  file.rs  lib.rs  main.rs  play.rs  plot.rs  pool.rs
src/buffer/: base.rs  mod.rs  shared.rs
src/dsp/: convert.rs  interleave.rs  mod.rs
src/sample_pool/: manifest.rs  mod.rs  pool.rs
