[package]
name = "auden"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Audio Engine"
readme = "README.md"
homepage = "https://github.com/nicochatzi/auden"
repository = "https://github.com/nicochatzi/auden"
keywords = ["dsp", "audio", "graph", "no_std"]
categories = [""]

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "pool"
harness = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
hashbrown = { version = "0.14.3", default-features = false, features = ["nightly"] }
hound = "3.5.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
uuid = { version = "1.6.1", default-features = false, features = ["v4"] }
clap = { version = "4.4.11", features = ["derive"] }
crc32fast = { version = "1.3.2", features = ["nightly"] }
log = "0.4.20"
plotly = "0.8.4"
mimalloc = "0.1.39"
cpal = "0.15.2"
env_logger = "0.10.1"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.1"
rand = "0.8.5"
