[package]
name = "auden"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Audio Engine"
readme = "README.md"
homepage = "https://github.com/nicochatzi/auden"
repository = "https://github.com/nicochatzi/auden"
keywords = ["multimedia", "multimedia::audio", "no-std"]
categories = [""]

[features]
default = ["std"]
std = ["plotly", "hound"]

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "pool"
harness = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
# no-std dependencies
hashbrown = { version = "0.14.3", default-features = false, features = [
  "nightly",
] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
uuid = { version = "1.6.1", default-features = false, features = ["v4"] }
crc32fast = { version = "1.3.2", features = ["nightly"] }
log = { version = "0.4.20", default-features = false }
# std dependencies
plotly = { version = "0.8.4", optional = true }
hound = { version = "3.5.1", optional = true }

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.1"
rand = "0.8.5"
