[package]
name = "auden"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = ""
readme = "README.md"
homepage = "https://github.com/nicochatzi/auden"
repository = "https://github.com/nicochatzi/auden"
keywords = ["multimedia", "multimedia::audio"]
categories = [""]

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "pool"
harness = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
hashbrown = { version = "0.14.3", features = ["nightly"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4", "zerocopy"] }
crc32fast = { version = "1.3.2", features = ["nightly"] }
log = "0.4.20"
libm = "0.2.1"
hound = "3.5.1"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.1"
rand = "0.8.5"
plotly = "0.8.4"
cpal = "0.15.2"
